# aoc_2025_10

./: Cargo.toml  Readme.md
src/: lib.rs  machine.rs
